# Collision_avoidance_sailingboat_VLP-16_ROS_Kinetic

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/anchorpoint/: anchor_compution
devel/lib/lidar_compution/: antiCollision  filter  visualize
devel/lib/pkgconfig/: anchorpoint.pc  lidar_compution.pc  sandbox.pc
devel/lib/sandbox/: sandbox  sandbox_from_file  settpoint_manual
devel/share/anchorpoint/cmake/: anchorpointConfig.cmake
devel/share/lidar_compution/cmake/: lidar_computionConfig.cmake
devel/share/sandbox/cmake/: sandboxConfig.cmake
lidar_compution_pkg/: package.xml
src/anchorpoint/: CMakeLists.txt
src/anchorpoint/src/: anchor_compution.cpp
src/lidar_compution/: CMakeLists.txt  package.xml
src/lidar_compution/src/: antiCollision.cpp  filter.cpp  visualize.cpp
